--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Starlover's Embed Tool</title>
     <link rel="stylesheet" href="Assets/style.css">
-    <link rel="icon" href="Assets/starlover.png" type="image/x-icon"> 
+    <link rel="icon" href="Assets/icon.png" type="image/x-icon"> 
 </head>
 <body>
     <div class="form-container">
