--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="icon" href="Assets/icon.png" type="image/x-icon"> 
 </head>
 <body>
+    <header>
+        <h1>Welcome to Starlover's Embed Tool</h1>
+    </header>
+    
     <div class="form-container">
         <h2>Discord Embed Formatter</h2>
         <form id="movieForm" enctype="multipart/form-data">
