--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="icon" href="Assets/icon.png" type="image/x-icon"> 
 </head>
 <body>
-    <header>
+   <header>
+    <div class="container">
         <h1>Welcome to Starlover's Embed Tool</h1>
+    </div>
     </header>
     
     <div class="form-container">
