--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Starlover's Embed Tool</title>
     <link rel="stylesheet" href="Assets/style.css">
     <link rel="icon" href="Assets/icon.png" type="image/x-icon"> 
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
    <header>
