--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Starlover's Embed Tool</title>
+    <title>Starlover's Embed Formatter</title>
     <link rel="stylesheet" href="Assets/style.css">
     <link rel="icon" href="Assets/icon.png" type="image/x-icon"> 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
@@ -11,7 +11,7 @@
 <body>
    <header>
     <div class="container">
-        <h1>Discord Embed Formatter</h1>
+        <h1>Starlover's Discord Embed Formatter</h1>
     </div>
     </header>
     
