--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Starlover's Embed Formatter</title>
+    <title>Drew's Embed Formatter</title>
     <link rel="stylesheet" href="Assets/style.css">
     <link rel="icon" href="Assets/icon.png" type="image/x-icon"> 
     <link href="https://fonts.googleapis.com/css2?family=Bona+Nova+SC&display=swap" rel="stylesheet">
@@ -11,7 +11,7 @@
 <body>
    <header>
     <div class="container">
-        <h1>Starlover's Discord Embed Formatter</h1>
+        <h1>Drew's Discord Embed Formatter</h1>
     </div>
     </header>
     
@@ -67,7 +67,7 @@
 
     <footer class="footer">
         <img src="Assets/starlover.png" alt="Starlover Icon" class="footer-icon">
-        <p>© 2024 Made by Starlover</p>
+        <p>© 2024 Made by Drew</p>
     </footer>
 
     <script>
@@ -83,7 +83,7 @@
             var backdropURL = '';
 
             if (!movieTitle || !movieLink) {
-                alert('Please enter both the movie name and movie link.');
+                alert('Please enter both the title and link.');
                 return;
             }
 
@@ -164,7 +164,7 @@
                                         backdropResultsContainer.appendChild(imgElement);
                                     });
                                 } else {
-                                    backdropResultsContainer.textContent = 'No backdrops found for the selected movie.';
+                                    backdropResultsContainer.textContent = 'No backdrops found for the selected media.';
                                 }
                             }
                         };
